--- a/src/tab/selected_tab/_bottom_rounded_corner_others.scss
+++ b/src/tab/selected_tab/_bottom_rounded_corner_others.scss
@@ -153,7 +153,7 @@
     }
   }
 
-  &[beforeselected-visible] .tab-background::after {
+  &:has(+ .tabbrowser-tab[visuallyselected]) .tab-background::after {
     --uc-tab-corner-right-side-svg: var(--uc-tab-corner-right-side-svg-clipped);
   }
   &[visuallyselected] + .tabbrowser-tab .tab-background::before {
